--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-
-
-
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -11,12 +8,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="robots" content="index, follow">
-	<link rel="canonical" href="https://myosotis-cloud.github.io/NazihaAbdellaoui_5_30082021"/>
+	<link rel="canonical" href="https://myosotis-cloud.github.io/NazihaAbdellaoui_5_30082021frontend"/>
   <!-- Site Metas -->
   <meta name="keywords" content="meilleur e-commerce de la vente en ligne, meilleur e-shop, achats, ventes, boutique en ligne, appareils photos, caméras, modèles moderne et vintage, ancien, qualité professionnelle, e-commerce, e-shop, spécialiste de la photographie, expertise photo, comment acheter son premier appareil photo ? quels critères pour acheter son appreil photo ?"/>
   <meta name="description" content="Orinoco, spécialiste de la ventes en ligne de produits catalogués par thématique, Oritextile, Oribook, Oriphoto, meilleur e-shop, e-commerce de la vente en ligne"/>
   <meta name="author" content="Naziha Abdellaoui" />
-  <link rel="shortcut icon" href="images/favicon.png" type="">
+  <link rel="shortcut icon" href="" type="">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <title>Orino-Cam, spécialiste de la vente en ligne d'appareils photo, le meilleur rapport qualité-prix, avec en plus l'expertise</title>
@@ -33,6 +30,8 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 
+  <script type="text/javascript" src="JWDP5/app.js"></script>
+  <script src="index.js" defer></script>
   <script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
@@ -74,8 +73,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contactez-nous</a>
               </li>
-              <li class="nav-item ">
-                <a class="nav-link cart-link" href="#">
+              <li class="nav-item" id="panier">
+                <a class="nav-link cart-link" href="page_panier.html">
                   <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                     <g>
                       <g>
